<resources>
    <string name="app_name">flask_app</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_register">Register failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_home">home</string>
    <string name="action_register">Register</string>
    <string name="action_test">Login Test</string>
    <string name="action_logout">Logout</string>
    <string name="action_back">Back</string>
    <string name="action_post">Post</string>
    <string name="action_get">Get</string>
    <string name="default_text"> </string>
    <string name="default_data">This is test data to post.</string>
    <string name="hint_text">Edit data here.</string>

    <string name="item_user">Username</string>
    <string name="item_logout">Logout</string>
</resources>
