<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/test_content"
        android:layout_width="374dp"
        android:layout_height="251dp"
        android:layout_marginTop="44dp"
        android:text="@string/default_text"
        app:layout_constraintStart_toStartOf="@+id/dataEdit"
        app:layout_constraintTop_toBottomOf="@+id/dataEdit" />

    <Button
        android:id="@+id/login_test"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="96dp"
        android:text="@string/action_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/data_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/action_post"
        app:layout_constraintStart_toEndOf="@+id/login_test"
        app:layout_constraintTop_toTopOf="@+id/login_test" />

    <Button
        android:id="@+id/data_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/data_post"
        app:layout_constraintTop_toTopOf="@+id/data_post" />

    <EditText
        android:id="@+id/dataEdit"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:hint="@string/hint_text"
        android:text="@string/default_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button-->
        <!--android:id="@+id/logout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="60dp"-->
        <!--android:text="@string/action_logout"-->
        <!--app:layout_constraintStart_toEndOf="@+id/login_test"-->
        <!--app:layout_constraintTop_toTopOf="@+id/login_test" />-->
</android.support.constraint.ConstraintLayout>